# office-widget

./: .gitignore  build-signed.cjs  package-lock.json  package.json
.github/scripts/: make-latest-json.mjs
.github/workflows/: release.yml
src/: App.css  App.jsx  append_to_App.css  firebase.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/src/: App.css  App.jsx  lib.rs  main.rs
