[package]
name = "office-widget"
version = "0.1.1"
description = "참괜찮은 사무실 위젯"
authors = ["you"]
edition = "2021"

[lib]
name = "office_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
